crates/solidity-v2/testing/snapshots/cst_output/SourceUnit/layout_at/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.29'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/SourceUnit/layout_at/input.sol:2:19]
   │
 2 │ contract SafeMath layout at 123  {
   │                   ──────┬──────  
   │                         ╰──────── Error occurred here.
───╯

Error: This syntax was introduced in version '0.8.29'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/SourceUnit/layout_at/input.sol:5:19]
   │
 5 │ contract SafeMath layout at foo{gas:123}  {
   │                   ───────────┬──────────  
   │                              ╰──────────── Error occurred here.
───╯

Error: This syntax was introduced in version '0.8.29'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/SourceUnit/layout_at/input.sol:8:19]
   │
 8 │ contract SafeMath layout at foo()  {
   │                   ───────┬───────  
   │                          ╰───────── Error occurred here.
───╯

Error: This syntax was introduced in version '0.8.29'.
    ╭─[crates/solidity-v2/testing/snapshots/cst_output/SourceUnit/layout_at/input.sol:11:19]
    │
 11 │ contract SafeMath layout at 123 + foo  {
    │                   ─────────┬─────────  
    │                            ╰─────────── Error occurred here.
────╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 95..103,
                    },
                    name: Identifier {
                        range: 104..112,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [
                            StorageLayoutSpecifier(
                                StorageLayoutSpecifierStruct {
                                    layout_keyword: LayoutKeyword {
                                        range: 113..119,
                                    },
                                    at_keyword: AtKeyword {
                                        range: 120..122,
                                    },
                                    expression: DecimalNumberExpression(
                                        DecimalNumberExpressionStruct {
                                            literal: DecimalLiteral {
                                                range: 123..126,
                                            },
                                            unit: None,
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                    open_brace: OpenBrace {
                        range: 128..129,
                    },
                    members: ContractMembers {
                        elements: [],
                    },
                    close_brace: CloseBrace {
                        range: 130..131,
                    },
                },
            ),
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 133..141,
                    },
                    name: Identifier {
                        range: 142..150,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [
                            StorageLayoutSpecifier(
                                StorageLayoutSpecifierStruct {
                                    layout_keyword: LayoutKeyword {
                                        range: 151..157,
                                    },
                                    at_keyword: AtKeyword {
                                        range: 158..160,
                                    },
                                    expression: CallOptionsExpression(
                                        CallOptionsExpressionStruct {
                                            operand: Identifier(
                                                Identifier {
                                                    range: 161..164,
                                                },
                                            ),
                                            open_brace: OpenBrace {
                                                range: 164..165,
                                            },
                                            options: CallOptions {
                                                elements: [
                                                    NamedArgumentStruct {
                                                        name: Identifier {
                                                            range: 165..168,
                                                        },
                                                        colon: Colon {
                                                            range: 168..169,
                                                        },
                                                        value: DecimalNumberExpression(
                                                            DecimalNumberExpressionStruct {
                                                                literal: DecimalLiteral {
                                                                    range: 169..172,
                                                                },
                                                                unit: None,
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                            close_brace: CloseBrace {
                                                range: 172..173,
                                            },
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                    open_brace: OpenBrace {
                        range: 175..176,
                    },
                    members: ContractMembers {
                        elements: [],
                    },
                    close_brace: CloseBrace {
                        range: 177..178,
                    },
                },
            ),
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 180..188,
                    },
                    name: Identifier {
                        range: 189..197,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [
                            StorageLayoutSpecifier(
                                StorageLayoutSpecifierStruct {
                                    layout_keyword: LayoutKeyword {
                                        range: 198..204,
                                    },
                                    at_keyword: AtKeyword {
                                        range: 205..207,
                                    },
                                    expression: FunctionCallExpression(
                                        FunctionCallExpressionStruct {
                                            operand: Identifier(
                                                Identifier {
                                                    range: 208..211,
                                                },
                                            ),
                                            arguments: PositionalArgumentsDeclaration(
                                                PositionalArgumentsDeclarationStruct {
                                                    open_paren: OpenParen {
                                                        range: 211..212,
                                                    },
                                                    arguments: PositionalArguments {
                                                        elements: [],
                                                    },
                                                    close_paren: CloseParen {
                                                        range: 212..213,
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                    open_brace: OpenBrace {
                        range: 215..216,
                    },
                    members: ContractMembers {
                        elements: [],
                    },
                    close_brace: CloseBrace {
                        range: 217..218,
                    },
                },
            ),
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 220..228,
                    },
                    name: Identifier {
                        range: 229..237,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [
                            StorageLayoutSpecifier(
                                StorageLayoutSpecifierStruct {
                                    layout_keyword: LayoutKeyword {
                                        range: 238..244,
                                    },
                                    at_keyword: AtKeyword {
                                        range: 245..247,
                                    },
                                    expression: AdditiveExpression(
                                        AdditiveExpressionStruct {
                                            left_operand: DecimalNumberExpression(
                                                DecimalNumberExpressionStruct {
                                                    literal: DecimalLiteral {
                                                        range: 248..251,
                                                    },
                                                    unit: None,
                                                },
                                            ),
                                            expression_additive_expression_operator: Plus(
                                                Plus {
                                                    range: 252..253,
                                                },
                                            ),
                                            right_operand: Identifier(
                                                Identifier {
                                                    range: 254..257,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                    open_brace: OpenBrace {
                        range: 259..260,
                    },
                    members: ContractMembers {
                        elements: [],
                    },
                    close_brace: CloseBrace {
                        range: 261..262,
                    },
                },
            ),
        ],
    },
}
